@@ -60,6 +60,10 @@ CHANGES
     and large string values don't pollute the output.
     [ticket:1822]
 
+  - Fixed bug that would prevent overridden clause
+    compilation from working for "annotated" expression
+    elements, which are often generated by the ORM.
+    
   - The argument to "ESCAPE" of a LIKE operator or similar
     is passed through render_literal_value(), which may 
     implement escaping of backslashes.  [ticket:1400]
